--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -46,3 +46,11 @@
 .code-font {
   font-family: monospace;
 }
+
+  
+@media (max-width: 675px) {
+  h1 {
+    font-size: xx-large;
+    width: 200px;
+  }
+}
